[package]
name = "rest-task-scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.5"
axum-macros = "0.2"
bb8 = "0.8"
bb8-redis = "0.12"
dotenvy = "0.15"
hyper = { version = "0.14", features = ["full"] }
rand = "0.8"
redis = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3"
tokio = { version = "1.22", features = ["full"] }
tower = "0.4"
once_cell = "1.16"
