[package]
name = "rest-task-scheduler"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.6.1"
axum-macros = "0.3"
dotenvy = "0.15"
hyper = { version = "0.14", features = ["full"] }
once_cell = "1.16"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "time", "uuid"] }
time = { version = "0.3", features = ["serde-human-readable"] }
tokio = { version = "1.22", features = ["full"] }
tower = "0.4"
uuid = { version = "1.2", features = ["serde", "v4"] }
ulid = { version = "1.0", features = ["uuid"] }
